--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=pw_adminHotelStiven
+
+server.port=443
+server.ssl.enabled=true
+server.ssl.key-alias=local_ssl
+server.ssl.key-store=classpath:local-ssl.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-password=Jssb2167.
+server.ssl.key-store-password=Jssb2167.
+
 spring.datasource.url=jdbc:mysql://localhost:3306/pw_adminhotelstiven
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.servlet.multipart.max-file-size=5MB
-#spring.servlet.multipart.max-request-size=5MB
 
 
